# crewai_design_document

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/docx/: Brijesh_Dhaker_ATS_Resume.docx  DESIGN_RAG.odp
docs/json/: articals.json  designs-research.json
docs/text/: Brijesh_K_Dhaker.md  Brijesh_Resume.txt  designs.txt
notebooks/agentic-ai/chromadb/: .crewai_user.json  chroma.sqlite3  latest_kickoff_task_outputs.db
notebooks/agentic-ai/crewai/: L001-crewai.ipynb  L002-crewai_trip_planner.ipynb  L003-agentic-workflow.ipynb  L004-pdfsearch.ipynb  L005-ProjectDesigner.ipynb  L006-ImageList.ipynb
notebooks/agentic-ai/openai/: 000-document.ipynb  000-pdf_loader.ipynb  playground.ipynb  (+4 more)
notebooks/config/: agents.yaml  tasks.yaml
notebooks/crewai/: L001-crewai_setup.ipynb  L002-crewai_trip_planner.ipynb  L003-agentic-workflow.ipynb  L004-pdfsearch.ipynb  L004-rag-clients-search.ipynb  L005-ProjectDesigner.ipynb  L006-ImageList.ipynb  L007-Research_Write_Article.ipynb  L008-customer_support.ipynb  L009-tools_customer_outreach.ipynb  L010-tasks_event_planning.ipynb  L015-crewai-memory.ipynb  L015-langchain_crewai_tools.ipynb  L016-crewai_human_intraction.ipynb  setup.ipynb
notebooks/designs/: designs-images.json  desings-images.json  desings-report.json  desings-research.json  doc-summary1.json
notebooks/knowledge/: designs-research.json  designs.txt  dharmendra.txt
notebooks/openai/: 000-openai.ipynb  000-pdf_loader.ipynb  002-agenticrag.ipynb  003-langchain-hf.ipynb  003-langgraph-conssite-audit .ipynb  003-langgraph-groq.ipynb
src/: mcp.json
(+86 files in other folders)
